# bytec

./: .gitignore  404.html  Cargo.toml  Lib.bt  Main.bt  README.md  api.html  arrays.html  classes.html  constants.html  define.html  example.bt  index.html  introduction.html  language.html  modules.html  optimization.html  print.html  searchindex.js  searchindex.json  usage.html
.github/workflows/: main.yml
bytec/: Lib.bt
bytec/main/: Main.bt
bytec/util2/: Lib.bt
guide/: book.toml
guide/src/: SUMMARY.md  api.md  arrays.md  classes.md  constants.md  define.md  introduction.md  language.md  modules.md  optimization.md  usage.md
src/: backend.rs  binding.rs  driver.rs  elaborate.rs  main.rs  parser.rs  pretty.rs  server.rs  term.rs
src/backend/: codegen.rs  lower.rs  mod.rs  optimize.rs
vscode/: CHANGELOG.md  README.md  language-configuration.json  package-lock.json  package.json  snippets.json  vsc-extension-quickstart.md
vscode/src/: extension.ts
vscode/syntaxes/: bytec.tmLanguage.json
