[package]
name = "bytec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lsp-server = "*"
lsp-types = "*"
serde = "*"
serde_json = "*"
ropey = "*"
pretty = { version = "*", features = ["termcolor"] }
termcolor = "*"
lazy_static = "*"
